--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Digital Marketing Agency - Professional marketing services" />
     <title>Digital Marketing Agency</title>
+    <script type="module" crossorigin src="/src/main.jsx"></script>
   </head>
   <body>
     <div id="root"></div>
